--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 		<head>
-				<title>Prueba de Select HTML | JC</title>
+				<title>Select HTML | JC</title>
 				<link rel="stylesheet" href="">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		</head>
 		<body>
-				<h1>Pruebas de Seleccion con "Select"</h1>
+				<h1>Formulario Etiqueta "Select" y Java Script</h1>
 				<spam>Seleccione el Producto Favorito: </spam>
 				<br>
 				<select id="cbxProductos" onchange="seleccionarProductoDos();">
@@ -35,6 +35,7 @@
 				<input id="iva"/>
 				<p>Total</p>
 				<input id="total"/>
+				
 				<script src="javascript.js"></script>
 		</body>
 </html>
