Actualizacion de la vesion v1.0.1

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 								<input id="iva"/>
 								<p>Total</p>
 								<input id="total"/>
+								<button name="enviar" type="button">Enviar</button>
 						</form>
 				</div>
 				<script src="javascript.js"></script>
